<resources>
    <string name="app_name">rentXperts</string>
    <string name="google_map_api_key">AIzaSyBUJXJGghtR5vTFeIFAljrdKtEdd4aqWeM</string>
    <string-array name="android_dropdown_objectType">
        <item>Normal Flat</item>
        <item>Furnished Apartment</item>
        <item>Duplex</item>
        <item>Terrace Apartment</item>
        <item>Penthhouse</item>
        <item>Attic</item>
        <item>Studio</item>
        <item>Loft</item>
        <item>House</item>
    </string-array>

    <string-array name="android_dropdown_objectValue">
        <item>21</item>
        <item>15</item>
        <item>13</item>
        <item>1099</item>
        <item>2</item>
        <item>5</item>
        <item>16</item>
        <item>100</item>
        <item>1199</item>
    </string-array>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="buttonConfirmImage">Confirm Image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


    <string name="key_contact_us">Contact Us</string>
    <string name="title_language">Language</string>
    <string name="url_company">www.iazi.ch</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="app_version">1.0</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="pref_header_about">About</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="net_liv_area">Net living area</string>
    <string name="meter_square">(m<small><sup>2</sup></small>)</string>
    <string name="meter_squarethumb">m<small><sup>2</sup></small></string>
    <string name="appraisal_message">Looks like your picture is not proper Real Estate property picture.\n\nOur image processing tools says picture looks like of %1$s.\n\nPlease click proper picture and valuate again.</string>
    <string name="please_wait">Please wait while we get default appraisal for you.</string>
    <string name="location_setting_message">We will need your location to provide you better services. Please enable location.</string>
    <string name="location_do_not_allow">Do not allow</string>
    <string name="access_your_location">ACCESS YOUR LOCATION</string>
    <string name="button_enable_location_service">Enable location service</string>
    <string name="capture_photo">Capture photo</string>
    <string name="text_click_photo_property">Click a photo of your property</string>
    <string name="map_of_location">Map of location</string>
    <string name="button_estimate">Estimate</string>
    <string name="address">Address:</string>
    <string name="est_value">Est.Value:</string>
    <string name="house_type">House Type</string>
    <string name="single_family_house">Single Family House</string>
    <string name="condominium">Condominium</string>
    <string name="type_of_property">Type of your property</string>
    <string name="type">Type</string>
    <string name="rooms">Rooms</string>
    <string name="zero">0</string>
    <string name="room_high">15</string>
    <string name="surf_high">500</string>
    <string name="low_1">1</string>
    <string name="buildyear_renov">Year of construction or last major renovation</string>
    <string name="year">Year</string>
    <string name="lift">Lift</string>
    <string name="surface">Surface:</string>
    <string name="rooms_top">Rooms:</string>


</resources>


