<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_about">

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/title_language"
            android:entries="@array/pref_lang_entries"
            android:entryValues="@array/pref_lang_values"
            android:key="@string/key_upload_quality"
            android:title="@string/title_language"
            android:summary="ENG"
            />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_contact_us"
            android:title="@string/key_contact_us" />

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_company" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_company" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>